content/_generated-doc/2.7/config/quarkus-amqp-amqp-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-amqp-amqp-build-time-config_configuration]]link:#quarkus-amqp-amqp-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.enabled]]`link:#quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.enabled[quarkus.amqp.devservices.enabled]`

[.description]
--
If Dev Services for AMQP has been explicitly enabled or disabled. Dev Services are generally enabled by default, unless there is an existing configuration present. For AMQP, Dev Services starts a broker unless `amqp-host` or `amqp-port` are set or if all the Reactive Messaging AMQP channel are configured with `host` or `port`.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.port]]`link:#quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.port[quarkus.amqp.devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
 If not defined, the port will be chosen randomly.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.image-name]]`link:#quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.image-name[quarkus.amqp.devservices.image-name]`

[.description]
--
The image to use. Note that only `quay.io/artemiscloud/activemq-artemis-broker` images are supported. Check https://quay.io/repository/artemiscloud/activemq-artemis-broker to find the available versions.
--|string 
|`quay.io/artemiscloud/activemq-artemis-broker:0.1.2`


a|icon:lock[title=Fixed at build time] [[quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.extra-args]]`link:#quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.extra-args[quarkus.amqp.devservices.extra-args]`

[.description]
--
The value of the `AMQ_EXTRA_ARGS` environment variable to pass to the container.
--|string 
|`--no-autotune --mapped --no-fsync`


a|icon:lock[title=Fixed at build time] [[quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.shared]]`link:#quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.shared[quarkus.amqp.devservices.shared]`

[.description]
--
Indicates if the AMQP broker managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for AMQP starts a new container. 
 The discovery uses the `quarkus-dev-service-amqp` label. The value is configured using the `service-name` property. 
 Container sharing is only used in dev mode.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.service-name]]`link:#quarkus-amqp-amqp-build-time-config_quarkus.amqp.devservices.service-name[quarkus.amqp.devservices.service-name]`

[.description]
--
The value of the `quarkus-dev-service-aqmp` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for AMQP looks for a container with the `quarkus-dev-service-amqp` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-amqp` label set to the specified value. 
 This property is used when you need multiple shared AMQP brokers.
--|string 
|`amqp`

|===